--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -5,24 +5,28 @@ on:
   push: 
     branches: ["main"]
 
+env:
+  # Use ghcr.io to store container images
+  REGISTRY: ghcr.io
+
 
 jobs:
 
-  sast:
-    runs-on: ubuntu-latest
-    continue-on-error: true
+  # sast:
+  #   runs-on: ubuntu-latest
+  #   continue-on-error: true
 
-    steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4.2.2
+  #   steps:
+  #   - name: Checkout repository
+  #     uses: actions/checkout@v4.2.2
 
-    - name: Gitleaks scan
-      uses: gitleaks/gitleaks-action@v2
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}    
+  #   - name: Gitleaks scan
+  #     uses: gitleaks/gitleaks-action@v2
+  #     env:
+  #       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}    
 
   semgrep:
-    needs: sast
+    # needs: sast
     permissions:
       contents: read
     
@@ -30,7 +34,6 @@ jobs:
     continue-on-error: true
 
     container:
-      # A Docker image with Semgrep installed. Do not change this.
       image: semgrep/semgrep
 
     steps:
@@ -68,12 +71,6 @@ jobs:
 
     steps:
     
-    - name: Extract Docker image metadata
-      id: meta
-      uses: docker/metadata-action@v5
-      with:
-        images: ${{ vars.DOCKER_USERNAME }}/my-image
-
     - name: Log into registry ghcr.io
       uses: docker/login-action@v3.3.0
       with:
@@ -81,6 +78,12 @@ jobs:
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
         logout: false
+
+    - name: Extract Docker metadata
+      id: meta
+      uses: docker/metadata-action@v5.5.1
+      with:
+        images: ${{ env.REGISTRY }}/${{ github.repository }}
 
     - name: Build and push Docker image
       uses: docker/build-push-action@v6
