--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -62,7 +62,6 @@ jobs:
 
     runs-on: ubuntu-latest
 
-
     permissions:
       contents: write
       packages: write
@@ -70,9 +69,14 @@ jobs:
       attestations: write
 
     steps:
-    
+    - name: Checkout repository
+      uses: actions/checkout@v4.2.2
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3.7.1
+
     - name: Log into registry ghcr.io
-      uses: docker/login-action@v3.3.0
+      uses: docker/login-action@v3.4.0
       with:
         registry: ${{ env.REGISTRY }}
         username: ${{ github.actor }}
@@ -80,13 +84,14 @@ jobs:
         logout: false
 
     - name: Extract Docker metadata
+      uses: docker/metadata-action@v5.7.0
       id: meta
-      uses: docker/metadata-action@v5.5.1
       with:
         images: ${{ env.REGISTRY }}/${{ github.repository }}
 
     - name: Build and push Docker image
-      uses: docker/build-push-action@v6
+      uses: docker/build-push-action@v6.15.0
+      id: build-and-push
       with:
         tags: ${{ steps.meta.outputs.tags }}
         annotations: ${{ steps.meta.outputs.annotations }}
