--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -99,12 +99,32 @@ jobs:
         labels: ${{ steps.meta.outputs.labels }}
         cache-from: type=gha
         cache-to: type=gha,mode=max
-        provenance: true
-        sbom: true
+        # provenance: true
+        # sbom: true
 
-    
+    - name: Attest
+      uses: actions/attest-build-provenance@v2.2.3
+      id: attest-provenance
+      with:
+        subject-name: ${{ env.REGISTRY }}/${{ github.repository }}
+        subject-digest: ${{ steps.build-and-push.outputs.digest }}
+        push-to-registry: true
+  
+    - name: Generate SBOM
+      uses: anchore/sbom-action@v0
+      with:
+        image: ${{ env.REGISTRY }}/${{ github.repository }}
+        format: 'cyclonedx-json'
+        output-file: 'sbom.cyclonedx.json'
 
-
+    - name: Attest
+      uses: actions/attest-sbom@v2
+      id: attest-sbom
+      with:
+        subject-name: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+        subject-digest: ${{ steps.build-and-push.outputs.digest }}
+        sbom-path: 'sbom.cyclonedx.json'
+        push-to-registry: true
 
 
 
