--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -121,7 +121,7 @@ jobs:
       uses: actions/attest-sbom@v2
       id: attest-sbom
       with:
-        subject-name: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{steps.meta.outputs.labels}}
+        subject-name: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
         subject-digest: ${{ steps.build-and-push.outputs.digest }}
         sbom-path: 'sbom.cyclonedx.json'
         push-to-registry: true
