--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -93,7 +93,7 @@ jobs:
       uses: docker/build-push-action@v6.15.0
       id: build-and-push
       with:
-        tags: ${{ env.REGISTRY }}/${{ github.repository }}:latest
+        tags: ${{ steps.meta.outputs.tags }}
         annotations: ${{ steps.meta.outputs.annotations }}
         push: true
         labels: ${{ steps.meta.outputs.labels }}
@@ -102,29 +102,29 @@ jobs:
         # provenance: true
         # sbom: true
 
-    - name: Attest Provenance
-      uses: actions/attest-build-provenance@v2.2.3
-      id: attest-provenance
-      with:
-        subject-name: ${{ env.REGISTRY }}/${{ github.repository }}
-        subject-digest: ${{ steps.build-and-push.outputs.digest }}
-        push-to-registry: true
+    # - name: Attest Provenance
+    #   uses: actions/attest-build-provenance@v2.2.3
+    #   id: attest-provenance
+    #   with:
+    #     subject-name: ${{ env.REGISTRY }}/${{ github.repository }}
+    #     subject-digest: ${{ steps.build-and-push.outputs.digest }}
+    #     push-to-registry: true
   
-    - name: Generate SBOM
-      uses: anchore/sbom-action@v0
-      with:
-        image: ${{ env.REGISTRY }}/${{ github.repository }}:latest
-        format: 'cyclonedx-json'
-        output-file: 'sbom.cyclonedx.json'
+    # - name: Generate SBOM
+    #   uses: anchore/sbom-action@v0
+    #   with:
+    #     image: ${{ env.REGISTRY }}/${{ github.repository }}:latest
+    #     format: 'cyclonedx-json'
+    #     output-file: 'sbom.cyclonedx.json'
 
-    - name: Attest SBOM
-      uses: actions/attest-sbom@v2
-      id: attest-sbom
-      with:
-        subject-name: ${{ env.REGISTRY }}/${{ github.repository }}:latest
-        subject-digest: ${{ steps.build-and-push.outputs.digest }}
-        sbom-path: 'sbom.cyclonedx.json'
-        push-to-registry: true
+    # - name: Attest SBOM
+    #   uses: actions/attest-sbom@v2
+    #   id: attest-sbom
+    #   with:
+    #     subject-name: ${{ env.REGISTRY }}/${{ github.repository }}:latest
+    #     subject-digest: ${{ steps.build-and-push.outputs.digest }}
+    #     sbom-path: 'sbom.cyclonedx.json'
+    #     push-to-registry: true
 
 
 
