--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -89,9 +89,6 @@ jobs:
       with:
         images: ${{ env.REGISTRY }}/${{ github.repository }}
 
-    - name: a
-      run: echo ${{ steps.meta.outputs.tags }}
-
     - name: Build and push Docker image
       uses: docker/build-push-action@v6.15.0
       id: build-and-push
@@ -105,13 +102,13 @@ jobs:
         # provenance: true
         # sbom: true
 
-    # - name: Attest Provenance
-    #   uses: actions/attest-build-provenance@v2.2.3
-    #   id: attest-provenance
-    #   with:
-    #     subject-name: ${{ env.REGISTRY }}/${{ github.repository }}
-    #     subject-digest: ${{ steps.build-and-push.outputs.digest }}
-    #     push-to-registry: true
+    - name: Attest Provenance
+      uses: actions/attest-build-provenance@v2.2.3
+      id: attest-provenance
+      with:
+        subject-name: ${{ env.REGISTRY }}/${{ github.repository }}
+        subject-digest: ${{ steps.build-and-push.outputs.digest }}
+        push-to-registry: true
   
     # - name: Generate SBOM
     #   uses: anchore/sbom-action@v0
