--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -110,21 +110,21 @@ jobs:
         subject-digest: ${{ steps.build-and-push.outputs.digest }}
         push-to-registry: true
   
-    # - name: Generate SBOM
-    #   uses: anchore/sbom-action@v0
-    #   with:
-    #     image: ${{ env.REGISTRY }}/${{ github.repository }}:latest
-    #     format: 'cyclonedx-json'
-    #     output-file: 'sbom.cyclonedx.json'
+    - name: Generate SBOM
+      uses: anchore/sbom-action@v0
+      with:
+        image: ${{ env.REGISTRY }}/${{ github.repository }}:latest
+        format: 'cyclonedx-json'
+        output-file: 'sbom.cyclonedx.json'
 
-    # - name: Attest SBOM
-    #   uses: actions/attest-sbom@v2
-    #   id: attest-sbom
-    #   with:
-    #     subject-name: ${{ env.REGISTRY }}/${{ github.repository }}:latest
-    #     subject-digest: ${{ steps.build-and-push.outputs.digest }}
-    #     sbom-path: 'sbom.cyclonedx.json'
-    #     push-to-registry: true
+    - name: Attest SBOM
+      uses: actions/attest-sbom@v2
+      id: attest-sbom
+      with:
+        subject-name: ${{ env.REGISTRY }}/${{ github.repository }}
+        subject-digest: ${{ steps.build-and-push.outputs.digest }}
+        sbom-path: 'sbom.cyclonedx.json'
+        push-to-registry: true
 
 
 
