--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,53 +12,7 @@ env:
 
 jobs:
 
-  # sast:
-  #   runs-on: ubuntu-latest
-  #   continue-on-error: true
-
-  #   steps:
-  #   - name: Checkout repository
-  #     uses: actions/checkout@v4.2.2
-
-  #   - name: Gitleaks scan
-  #     uses: gitleaks/gitleaks-action@v2
-  #     env:
-  #       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}    
-
-  semgrep:
-    # needs: sast
-    permissions:
-      contents: read
-    
-    runs-on: ubuntu-latest
-    continue-on-error: true
-
-    container:
-      image: semgrep/semgrep
-
-    steps:
-
-    - name: Checkout repository
-      uses: actions/checkout@v4.2.2
-  
-    - name: Semgrep
-      run: semgrep ci
-
-  test:
-    needs: semgrep
-    runs-on: ubuntu-latest
-    continue-on-error: true
-
-    steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4.2.2
-
-    - name: Test
-      run: npm test
-
-
   build-image:
-    needs: test
     runs-on: ubuntu-latest
     outputs:  #declare image digest as output, to feed it to next job
       container_image_digest: ${{ steps.build-and-push.outputs.digest }}
@@ -114,6 +68,14 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4.2.2
+
+    - name: Log into registry ghcr.io
+      uses: docker/login-action@v3.4.0
+      with:
+        registry: ${{ env.REGISTRY }}
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+        logout: false
 
     - name: Attest Provenance
       uses: actions/attest-build-provenance@v2.2.3
