--- a/.github/workflows/ci_att_actions.yaml
+++ b/.github/workflows/ci_att_actions.yaml
@@ -2,8 +2,8 @@ name: Build Images
 
 on:
   workflow_dispatch: {}
-  push: 
-    branches: ["main"]
+  # push: 
+  #   branches: ["main"]
 
 env:
   # Use ghcr.io to store container images
