--- a/.github/workflows/ci_att_actions.yaml
+++ b/.github/workflows/ci_att_actions.yaml
@@ -68,8 +68,8 @@ jobs:
       attestations: write
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4.2.2
+    # - name: Checkout repository
+    #   uses: actions/checkout@v4.2.2
 
     - name: Log into registry ghcr.io
       uses: docker/login-action@v3.4.0
@@ -104,6 +104,25 @@ jobs:
         push-to-registry: true
 
 
+  verify-attestations:
+    runs-on: ubuntu-latest
 
+    permissions:
+      contents: write
+      packages: write
+      id-token: write
+      attestations: write
 
+    steps:
 
+    - name: Log into registry ghcr.io
+      uses: docker/login-action@v3.4.0
+      with:
+        registry: ${{ env.REGISTRY }}
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+        logout: false
+
+    - name: Verify attestations
+      run: |
+        gh attestation verify oci://${{ env.REGISTRY }}/${{ github.repository }}:latest --owner excid-io
