--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "github-attestations-test",
+  "name": "excid-io-github-attestations-test",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -20,8 +20,7 @@
   },
   "homepage": "https://github.com/excid-io/attestations-test#readme",
   "dependencies": {
-    "express": "^4.21.2",
-    "github-attestations-test22": "^1.0.0"
+    "express": "^4.21.2"
   },
   "devDependencies": {
     "typescript": "^5.8.2"
